Y_CA_F3_FragmentosSelect2Selects/files/gen/DMLSelectParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 DMLSelect.g 2014-05-05 17:55:01

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DMLSelectParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SET_QUANTIFIER", "ID", "IDEXPRESSION", "PERIOD", "ASTERISK", "COMMA", "NULL_SPECIFICATION", "DEFAULT_SPECIFICATION", "UNSIGNED_INTEGER", "EQUALS_OPERATOR", "NOT_EQUALS_OPERATOR", "LESS_THAN_OPERATOR", "GREATER_THAN_OPERATOR", "LESS_THAN_OR_EQUALS_OPERATOR", "GREATER_THAN_OR_EQUALS_OPERATOR", "LEFT_PARENT", "RIGHT_PARENT", "ORDERING_SPECIFICATION", "TRUTH_VALUE", "WS", "'SELECT'", "'AS'", "'FROM'", "'WHERE'", "'GROUP BY'", "'HAVING'", "'OR'", "'AND'", "'NOT'", "'BETWEEN'", "'IN'", "'LIKE'", "'IS'", "'ORDER BY'"
    };
    public static final int IDEXPRESSION=6;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int LEFT_PARENT=19;
    public static final int DEFAULT_SPECIFICATION=11;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int PERIOD=7;
    public static final int LESS_THAN_OR_EQUALS_OPERATOR=17;
    public static final int RIGHT_PARENT=20;
    public static final int NULL_SPECIFICATION=10;
    public static final int ID=5;
    public static final int EOF=-1;
    public static final int EQUALS_OPERATOR=13;
    public static final int ASTERISK=8;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int UNSIGNED_INTEGER=12;
    public static final int T__32=32;
    public static final int WS=23;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int GREATER_THAN_OPERATOR=16;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int COMMA=9;
    public static final int ORDERING_SPECIFICATION=21;
    public static final int LESS_THAN_OPERATOR=15;
    public static final int SET_QUANTIFIER=4;
    public static final int GREATER_THAN_OR_EQUALS_OPERATOR=18;
    public static final int NOT_EQUALS_OPERATOR=14;
    public static final int TRUTH_VALUE=22;

    // delegates
    // delegators


        public DMLSelectParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DMLSelectParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DMLSelectParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return DMLSelectParser.tokenNames; }
    public String getGrammarFileName() { return "DMLSelect.g"; }


    public static class statements_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "statements"
    // DMLSelect.g:19:1: statements returns [Node returnNode] : (query_specificationGen+= query_specification )* ;
    public final DMLSelectParser.statements_return statements() throws RecognitionException {
        DMLSelectParser.statements_return retval = new DMLSelectParser.statements_return();
        retval.start = input.LT(1);

        List list_query_specificationGen=null;
        RuleReturnScope query_specificationGen = null;
        try {
            // DMLSelect.g:20:1: ( (query_specificationGen+= query_specification )* )
            // DMLSelect.g:20:4: (query_specificationGen+= query_specification )*
            {
            // DMLSelect.g:20:26: (query_specificationGen+= query_specification )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==24) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // DMLSelect.g:20:26: query_specificationGen+= query_specification
            	    {
            	    pushFollow(FOLLOW_query_specification_in_statements42);
            	    query_specificationGen=query_specification();

            	    state._fsp--;

            	    if (list_query_specificationGen==null) list_query_specificationGen=new ArrayList();
            	    list_query_specificationGen.add(query_specificationGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            		// Create return CST Node
            		Node statementsReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		statementsReturnNode.setKind("statements");
            	    // Create a CST Node
            		if(list_query_specificationGen != null) {
            	        for(Iterator it = list_query_specificationGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.query_specification_return r = (DMLSelectParser.query_specification_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("query_specification");
            	            	statementsReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = statementsReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statements"

    public static class query_specification_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "query_specification"
    // DMLSelect.g:40:1: query_specification returns [Node returnNode] : TK_0= 'SELECT' (SET_QUANTIFIERGen= SET_QUANTIFIER )? ( (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA ) (TK_1= 'AS' )? )* table_expressionGen+= table_expression ;
    public final DMLSelectParser.query_specification_return query_specification() throws RecognitionException {
        DMLSelectParser.query_specification_return retval = new DMLSelectParser.query_specification_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token SET_QUANTIFIERGen=null;
        Token IDGen=null;
        Token IDEXPRESSIONGen=null;
        Token PERIODGen=null;
        Token ASTERISKGen=null;
        Token COMMAGen=null;
        Token TK_1=null;
        List list_table_expressionGen=null;
        RuleReturnScope table_expressionGen = null;
        try {
            // DMLSelect.g:41:1: (TK_0= 'SELECT' (SET_QUANTIFIERGen= SET_QUANTIFIER )? ( (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA ) (TK_1= 'AS' )? )* table_expressionGen+= table_expression )
            // DMLSelect.g:41:4: TK_0= 'SELECT' (SET_QUANTIFIERGen= SET_QUANTIFIER )? ( (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA ) (TK_1= 'AS' )? )* table_expressionGen+= table_expression
            {
            TK_0=(Token)match(input,24,FOLLOW_24_in_query_specification65); 
            // DMLSelect.g:41:18: (SET_QUANTIFIERGen= SET_QUANTIFIER )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==SET_QUANTIFIER) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // DMLSelect.g:41:20: SET_QUANTIFIERGen= SET_QUANTIFIER
                    {
                    SET_QUANTIFIERGen=(Token)match(input,SET_QUANTIFIER,FOLLOW_SET_QUANTIFIER_in_query_specification71); 

                    }
                    break;

            }

            // DMLSelect.g:41:55: ( (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA ) (TK_1= 'AS' )? )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=ID && LA5_0<=COMMA)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // DMLSelect.g:41:56: (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA ) (TK_1= 'AS' )?
            	    {
            	    // DMLSelect.g:41:56: (IDGen= ID | IDEXPRESSIONGen= IDEXPRESSION | PERIODGen= PERIOD | ASTERISKGen= ASTERISK | COMMAGen= COMMA )
            	    int alt3=5;
            	    switch ( input.LA(1) ) {
            	    case ID:
            	        {
            	        alt3=1;
            	        }
            	        break;
            	    case IDEXPRESSION:
            	        {
            	        alt3=2;
            	        }
            	        break;
            	    case PERIOD:
            	        {
            	        alt3=3;
            	        }
            	        break;
            	    case ASTERISK:
            	        {
            	        alt3=4;
            	        }
            	        break;
            	    case COMMA:
            	        {
            	        alt3=5;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 3, 0, input);

            	        throw nvae;
            	    }

            	    switch (alt3) {
            	        case 1 :
            	            // DMLSelect.g:41:58: IDGen= ID
            	            {
            	            IDGen=(Token)match(input,ID,FOLLOW_ID_in_query_specification80); 

            	            }
            	            break;
            	        case 2 :
            	            // DMLSelect.g:41:70: IDEXPRESSIONGen= IDEXPRESSION
            	            {
            	            IDEXPRESSIONGen=(Token)match(input,IDEXPRESSION,FOLLOW_IDEXPRESSION_in_query_specification87); 

            	            }
            	            break;
            	        case 3 :
            	            // DMLSelect.g:41:102: PERIODGen= PERIOD
            	            {
            	            PERIODGen=(Token)match(input,PERIOD,FOLLOW_PERIOD_in_query_specification94); 

            	            }
            	            break;
            	        case 4 :
            	            // DMLSelect.g:41:121: ASTERISKGen= ASTERISK
            	            {
            	            ASTERISKGen=(Token)match(input,ASTERISK,FOLLOW_ASTERISK_in_query_specification100); 

            	            }
            	            break;
            	        case 5 :
            	            // DMLSelect.g:41:145: COMMAGen= COMMA
            	            {
            	            COMMAGen=(Token)match(input,COMMA,FOLLOW_COMMA_in_query_specification107); 

            	            }
            	            break;

            	    }

            	    // DMLSelect.g:41:161: (TK_1= 'AS' )?
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==25) ) {
            	        alt4=1;
            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // DMLSelect.g:41:163: TK_1= 'AS'
            	            {
            	            TK_1=(Token)match(input,25,FOLLOW_25_in_query_specification114); 

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_table_expression_in_query_specification124);
            table_expressionGen=table_expression();

            state._fsp--;

            if (list_table_expressionGen==null) list_table_expressionGen=new ArrayList();
            list_table_expressionGen.add(table_expressionGen);


            		// Create return CST Node
            		Node query_specificationReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		query_specificationReturnNode.setKind("query_specification");
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_0!=null?TK_0.getText():null), TK_0.getCharPositionInLine(), TK_0.getLine());
            	 		query_specificationReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(SET_QUANTIFIERGen != null) {
            			Leaf SET_QUANTIFIERGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("SET_QUANTIFIER", (SET_QUANTIFIERGen!=null?SET_QUANTIFIERGen.getText():null), SET_QUANTIFIERGen.getCharPositionInLine(), SET_QUANTIFIERGen.getLine());
            			query_specificationReturnNode.getChildren().add(SET_QUANTIFIERGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(IDGen != null) {
            			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen!=null?IDGen.getText():null), IDGen.getCharPositionInLine(), IDGen.getLine());
            			query_specificationReturnNode.getChildren().add(IDGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(IDEXPRESSIONGen != null) {
            			Leaf IDEXPRESSIONGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("IDEXPRESSION", (IDEXPRESSIONGen!=null?IDEXPRESSIONGen.getText():null), IDEXPRESSIONGen.getCharPositionInLine(), IDEXPRESSIONGen.getLine());
            			query_specificationReturnNode.getChildren().add(IDEXPRESSIONGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(PERIODGen != null) {
            			Leaf PERIODGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("PERIOD", (PERIODGen!=null?PERIODGen.getText():null), PERIODGen.getCharPositionInLine(), PERIODGen.getLine());
            			query_specificationReturnNode.getChildren().add(PERIODGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(ASTERISKGen != null) {
            			Leaf ASTERISKGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ASTERISK", (ASTERISKGen!=null?ASTERISKGen.getText():null), ASTERISKGen.getCharPositionInLine(), ASTERISKGen.getLine());
            			query_specificationReturnNode.getChildren().add(ASTERISKGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(COMMAGen != null) {
            			Leaf COMMAGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("COMMA", (COMMAGen!=null?COMMAGen.getText():null), COMMAGen.getCharPositionInLine(), COMMAGen.getLine());
            			query_specificationReturnNode.getChildren().add(COMMAGenLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_1 != null) {
            			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_1!=null?TK_1.getText():null), TK_1.getCharPositionInLine(), TK_1.getLine());
            	 		query_specificationReturnNode.getChildren().add(TK_1Leaf);
            	 	}
            	    // Create a CST Node
            		if(list_table_expressionGen != null) {
            	        for(Iterator it = list_table_expressionGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.table_expression_return r = (DMLSelectParser.table_expression_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("table_expression");
            	            	query_specificationReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = query_specificationReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "query_specification"

    public static class derived_column_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "derived_column"
    // DMLSelect.g:101:1: derived_column returns [Node returnNode] : column_referenceGen+= column_reference (as_clauseGen+= as_clause )? ;
    public final DMLSelectParser.derived_column_return derived_column() throws RecognitionException {
        DMLSelectParser.derived_column_return retval = new DMLSelectParser.derived_column_return();
        retval.start = input.LT(1);

        List list_column_referenceGen=null;
        List list_as_clauseGen=null;
        RuleReturnScope column_referenceGen = null;
        RuleReturnScope as_clauseGen = null;
        try {
            // DMLSelect.g:102:1: (column_referenceGen+= column_reference (as_clauseGen+= as_clause )? )
            // DMLSelect.g:102:4: column_referenceGen+= column_reference (as_clauseGen+= as_clause )?
            {
            pushFollow(FOLLOW_column_reference_in_derived_column147);
            column_referenceGen=column_reference();

            state._fsp--;

            if (list_column_referenceGen==null) list_column_referenceGen=new ArrayList();
            list_column_referenceGen.add(column_referenceGen);

            // DMLSelect.g:102:42: (as_clauseGen+= as_clause )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID||LA6_0==25) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // DMLSelect.g:102:44: as_clauseGen+= as_clause
                    {
                    pushFollow(FOLLOW_as_clause_in_derived_column153);
                    as_clauseGen=as_clause();

                    state._fsp--;

                    if (list_as_clauseGen==null) list_as_clauseGen=new ArrayList();
                    list_as_clauseGen.add(as_clauseGen);


                    }
                    break;

            }


            		// Create return CST Node
            		Node derived_columnReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		derived_columnReturnNode.setKind("derived_column");
            	    // Create a CST Node
            		if(list_column_referenceGen != null) {
            	        for(Iterator it = list_column_referenceGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.column_reference_return r = (DMLSelectParser.column_reference_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("column_reference");
            	            	derived_columnReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            	    // Create a CST Node
            		if(list_as_clauseGen != null) {
            	        for(Iterator it = list_as_clauseGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.as_clause_return r = (DMLSelectParser.as_clause_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("as_clause");
            	            	derived_columnReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = derived_columnReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "derived_column"

    public static class as_clause_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "as_clause"
    // DMLSelect.g:132:1: as_clause returns [Node returnNode] : (TK_0= 'AS' )? column_nameGen+= column_name ;
    public final DMLSelectParser.as_clause_return as_clause() throws RecognitionException {
        DMLSelectParser.as_clause_return retval = new DMLSelectParser.as_clause_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        List list_column_nameGen=null;
        RuleReturnScope column_nameGen = null;
        try {
            // DMLSelect.g:133:1: ( (TK_0= 'AS' )? column_nameGen+= column_name )
            // DMLSelect.g:133:3: (TK_0= 'AS' )? column_nameGen+= column_name
            {
            // DMLSelect.g:133:3: (TK_0= 'AS' )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==25) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // DMLSelect.g:133:5: TK_0= 'AS'
                    {
                    TK_0=(Token)match(input,25,FOLLOW_25_in_as_clause179); 

                    }
                    break;

            }

            pushFollow(FOLLOW_column_name_in_as_clause186);
            column_nameGen=column_name();

            state._fsp--;

            if (list_column_nameGen==null) list_column_nameGen=new ArrayList();
            list_column_nameGen.add(column_nameGen);


            		// Create return CST Node
            		Node as_clauseReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		as_clauseReturnNode.setKind("as_clause");
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_0!=null?TK_0.getText():null), TK_0.getCharPositionInLine(), TK_0.getLine());
            	 		as_clauseReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a CST Node
            		if(list_column_nameGen != null) {
            	        for(Iterator it = list_column_nameGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.column_name_return r = (DMLSelectParser.column_name_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("column_name");
            	            	as_clauseReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = as_clauseReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "as_clause"

    public static class expression_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "expression"
    // DMLSelect.g:158:1: expression returns [Node returnNode] : IDEXPRESSIONGen= IDEXPRESSION (as_clauseGen+= as_clause )? ;
    public final DMLSelectParser.expression_return expression() throws RecognitionException {
        DMLSelectParser.expression_return retval = new DMLSelectParser.expression_return();
        retval.start = input.LT(1);

        Token IDEXPRESSIONGen=null;
        List list_as_clauseGen=null;
        RuleReturnScope as_clauseGen = null;
        try {
            // DMLSelect.g:159:1: (IDEXPRESSIONGen= IDEXPRESSION (as_clauseGen+= as_clause )? )
            // DMLSelect.g:159:4: IDEXPRESSIONGen= IDEXPRESSION (as_clauseGen+= as_clause )?
            {
            IDEXPRESSIONGen=(Token)match(input,IDEXPRESSION,FOLLOW_IDEXPRESSION_in_expression209); 
            // DMLSelect.g:159:33: (as_clauseGen+= as_clause )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID||LA8_0==25) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // DMLSelect.g:159:35: as_clauseGen+= as_clause
                    {
                    pushFollow(FOLLOW_as_clause_in_expression215);
                    as_clauseGen=as_clause();

                    state._fsp--;

                    if (list_as_clauseGen==null) list_as_clauseGen=new ArrayList();
                    list_as_clauseGen.add(as_clauseGen);


                    }
                    break;

            }


            		// Create return CST Node
            		Node expressionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		expressionReturnNode.setKind("expression");
            	    // Create a CST Leaf
            		if(IDEXPRESSIONGen != null) {
            			Leaf IDEXPRESSIONGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("IDEXPRESSION", (IDEXPRESSIONGen!=null?IDEXPRESSIONGen.getText():null), IDEXPRESSIONGen.getCharPositionInLine(), IDEXPRESSIONGen.getLine());
            			expressionReturnNode.getChildren().add(IDEXPRESSIONGenLeaf);
            		}
            	    // Create a CST Node
            		if(list_as_clauseGen != null) {
            	        for(Iterator it = list_as_clauseGen.iterator(); it.hasNext(); )  { 
            	            DMLSelectParser.as_clause_return r = (DMLSelectParser.as_clause_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("as_clause");
            	            	expressionReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = expressionReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class column_name_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "column_name"
    // DMLSelect.g:184:1: column_name returns [Node returnNode] : IDGen= ID ;
    public final DMLSelectParser.column_name_return column_name() throws RecognitionException {
        DMLSelectParser.column_name_return retval = new DMLSelectParser.column_name_return();
        retval.start = input.LT(1);

        Token IDGen=null;

        try {
            // DMLSelect.g:185:1: (IDGen= ID )
            // DMLSelect.g:185:4: IDGen= ID
            {
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_column_name239); 

            		// Create return CST Node
            		Node column_nameReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		column_nameReturnNode.setKind("column_name");
            	    // Create a CST Leaf
            		if(IDGen != null) {
            			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen!=null?IDGen.getText():null), IDGen.getCharPositionInLine(), IDGen.getLine());
            			column_nameReturnNode.getChildren().add(IDGenLeaf);
            		}
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = column_nameReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "column_name"

    public static class table_expression_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "table_expression"
    // DMLSelect.g:200:1: table_expression returns [Node returnNode] : from_clauseGen+= from_clause (where_clauseGen+= where_clause )? (group_by_clauseGen+= group_by_clause )? (having_clauseGen+= having_clause )? (order_by_clauseGen+= order_by_clause )? ;
    public final DMLSelectParser.table_expression_return table_expression() throws RecognitionException {
        DMLSelectParser.table_expression_return retval = new DMLSelectParser.table_expression_return();
        retval.start = input.LT(1);

        List list_from_clauseGen=null;
        List list_where_clauseGen=null;
        List list_group_by_clauseGen=null;
        List list_having_clauseGen=null;
        List list_order_by_clauseGen=null;
        RuleReturnScope from_clauseGen = null;
        RuleReturnScope where_clauseGen = null;
        RuleReturnScope group_by_clauseGen = null;
        RuleReturnScope having_clauseGen = null;
        RuleReturnScope order_by_clauseGen = null;
        try {
            // DMLSelect.g:201:1: (from_clauseGen+= from_clause (where_clauseGen+= where_clause )? (group_by_clauseGen+= group_by_clause )? (having_clauseGen+= having_clause )? (order_by_clauseGen+= order_by_clause )? )
            // DMLSelect.g:201:4: from_clauseGen+= from_clause (where_clauseGen+= where_clause )? (group_by_clauseGen+= group_by_clause )? (having_clauseGen+= having_clause )? (order_by_clauseGen+= order_by_clause )?
            {
            pushFollow(FOLLOW_from_clause_in_table_expression261);
            from_clauseGen=from_clause();

            state._fsp--;

            if (list_from_clauseGen==null) list_from_clauseGen=new ArrayList();
            list_from_clauseGen.add(from_clauseGen);

            // DMLSelect.g:201:32: (where_clauseGen+= where_clause )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==27) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // DMLSelect.g:201:34: where_clauseGen+= where_clause
                    {
                    pushFollow(FOLLOW_where_clause_in_table_expression267);
                    where_clauseGen=where_clause();

                    state._fsp--;

                    if (list_where_clauseGen==null) list_where_clauseGen=new ArrayList();
                    list_where_clauseGen.add(where_clauseGen);


                    }
                    break;

            }
